--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <div class="col-xxl-5 col-xl-5 col-lg-7 col-md-8">
             <div class="section-title text-center mb-60">
               <h3 class="mb-15 wow fadeInUp" data-wow-delay=".2s">Specializing In</h3>
-              <p class="wow fadeInUp" data-wow-delay=".4s">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+              <p class="wow fadeInUp" data-wow-delay=".4s">Needing help managing your network infrastructure? Elbrus has everything you need!</p>
             </div>
           </div>
         </div>
@@ -146,7 +146,7 @@
                   </svg>                  
               </div>
               <div class="content">
-                <h5>Graphics Design</h5>
+                <h5>Traffic Capturing</h5>
                 <p>Short description for the ones who look for something new.</p>
               </div>
             </div>
@@ -160,7 +160,7 @@
                   </svg> 
               </div>
               <div class="content">
-                <h5>Print Design</h5>
+                <h5>Analysis</h5>
                 <p>Short description for the ones who look for something new.</p>
               </div>
             </div>
@@ -174,7 +174,7 @@
                   </svg> 
               </div>
               <div class="content">
-                <h5>Business Analysis</h5>
+                <h5>Visualisation</h5>
                 <p>Short description for the ones who look for something new.</p>
               </div>
             </div>
@@ -188,7 +188,7 @@
                   </svg> 
               </div>
               <div class="content">
-                <h5>Web Development</h5>
+                <h5>Security</h5>
                 <p>Short description for the ones who look for something new.</p>
               </div>
             </div>
@@ -202,7 +202,7 @@
                   </svg> 
               </div>
               <div class="content">
-                <h5>Best Security</h5>
+                <h5>Alerts</h5>
                 <p>Short description for the ones who look for something new.</p>
               </div>
             </div>
@@ -210,13 +210,13 @@
           <div class="col-lg-4 col-md-6">
             <div class="single-feature wow fadeInUp" data-wow-delay=".6s">
               <div class="icon">
-                <i class="lni lni-code"></i>
+                <i class="lni lni-database"></i>
                 <svg width="110" height="72" viewBox="0 0 110 72" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M110 54.7589C110 85.0014 85.3757 66.2583 55 66.2583C24.6243 66.2583 0 85.0014 0 54.7589C0 24.5164 24.6243 0 55 0C85.3757 0 110 24.5164 110 54.7589Z" fill="#EBF4FF"/>
                   </svg> 
               </div>
               <div class="content">
-                <h5>Web Design</h5>
+                <h5>History</h5>
                 <p>Short description for the ones who look for something new.</p>
               </div>
             </div>
