--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="assets/css/tiny-slider.css"/>
     <link rel="stylesheet" href="assets/css/animate.css"/>
     <link rel="stylesheet" href="assets/css/lindy-uikit.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   </head>
   <body>
     <!--[if lte IE 9]>
@@ -140,55 +141,69 @@
           <div class="col-lg-4 col-md-6">
             <div class="single-feature wow fadeInUp" data-wow-delay=".2s">
               <div class="icon">
-                <i class="lni lni-vector"></i>
+                <i class="bi bi-bezier"></i>
                 <svg width="110" height="72" viewBox="0 0 110 72" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M110 54.7589C110 85.0014 85.3757 66.2583 55 66.2583C24.6243 66.2583 0 85.0014 0 54.7589C0 24.5164 24.6243 0 55 0C85.3757 0 110 24.5164 110 54.7589Z" fill="#EBF4FF"/>
                   </svg>                  
               </div>
               <div class="content">
                 <h5>Traffic Capturing</h5>
-                <p>Short description for the ones who look for something new.</p>
+                <p>Our solution captures the traffic at the break-out point of your network.</p>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="single-feature wow fadeInUp" data-wow-delay=".4s">
               <div class="icon">
-                <i class="lni lni-pallet"></i>
+                <i class="bi bi-cpu"></i>
                 <svg width="110" height="72" viewBox="0 0 110 72" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M110 54.7589C110 85.0014 85.3757 66.2583 55 66.2583C24.6243 66.2583 0 85.0014 0 54.7589C0 24.5164 24.6243 0 55 0C85.3757 0 110 24.5164 110 54.7589Z" fill="#EBF4FF"/>
                   </svg> 
               </div>
               <div class="content">
                 <h5>Analysis</h5>
-                <p>Short description for the ones who look for something new.</p>
+                <p>The data is processed and verified using industry-standard analysis tools.</p>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="single-feature wow fadeInUp" data-wow-delay=".6s">
               <div class="icon">
-                <i class="lni lni-stats-up"></i>
+                <i class="bi bi-graph-up"></i>
                 <svg width="110" height="72" viewBox="0 0 110 72" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M110 54.7589C110 85.0014 85.3757 66.2583 55 66.2583C24.6243 66.2583 0 85.0014 0 54.7589C0 24.5164 24.6243 0 55 0C85.3757 0 110 24.5164 110 54.7589Z" fill="#EBF4FF"/>
                   </svg> 
               </div>
               <div class="content">
                 <h5>Visualisation</h5>
-                <p>Short description for the ones who look for something new.</p>
+                <p>All statistics can be accessed over a webinterface.</p>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="single-feature wow fadeInUp" data-wow-delay=".2s">
               <div class="icon">
-                <i class="lni lni-code-alt"></i>
+                <i class="bi bi-key"></i>
                 <svg width="110" height="72" viewBox="0 0 110 72" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M110 54.7589C110 85.0014 85.3757 66.2583 55 66.2583C24.6243 66.2583 0 85.0014 0 54.7589C0 24.5164 24.6243 0 55 0C85.3757 0 110 24.5164 110 54.7589Z" fill="#EBF4FF"/>
                   </svg> 
               </div>
               <div class="content">
                 <h5>Security</h5>
+                <p>Detect an attack early to better protect the network.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="single-feature wow fadeInUp" data-wow-delay=".6s">
+              <div class="icon">
+                <i class="bi bi-hdd"></i>
+                <svg width="110" height="72" viewBox="0 0 110 72" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M110 54.7589C110 85.0014 85.3757 66.2583 55 66.2583C24.6243 66.2583 0 85.0014 0 54.7589C0 24.5164 24.6243 0 55 0C85.3757 0 110 24.5164 110 54.7589Z" fill="#EBF4FF"/>
+                  </svg> 
+              </div>
+              <div class="content">
+                <h5>History</h5>
                 <p>Short description for the ones who look for something new.</p>
               </div>
             </div>
@@ -196,27 +211,13 @@
           <div class="col-lg-4 col-md-6">
             <div class="single-feature wow fadeInUp" data-wow-delay=".4s">
               <div class="icon">
-                <i class="lni lni-lock"></i>
+                <i class="bi bi-exclamation-octagon"></i>
                 <svg width="110" height="72" viewBox="0 0 110 72" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M110 54.7589C110 85.0014 85.3757 66.2583 55 66.2583C24.6243 66.2583 0 85.0014 0 54.7589C0 24.5164 24.6243 0 55 0C85.3757 0 110 24.5164 110 54.7589Z" fill="#EBF4FF"/>
                   </svg> 
               </div>
               <div class="content">
                 <h5>Alerts</h5>
-                <p>Short description for the ones who look for something new.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="single-feature wow fadeInUp" data-wow-delay=".6s">
-              <div class="icon">
-                <i class="lni lni-database"></i>
-                <svg width="110" height="72" viewBox="0 0 110 72" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M110 54.7589C110 85.0014 85.3757 66.2583 55 66.2583C24.6243 66.2583 0 85.0014 0 54.7589C0 24.5164 24.6243 0 55 0C85.3757 0 110 24.5164 110 54.7589Z" fill="#EBF4FF"/>
-                  </svg> 
-              </div>
-              <div class="content">
-                <h5>History</h5>
                 <p>Short description for the ones who look for something new.</p>
               </div>
             </div>
