--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
               </div>
               <div class="content">
                 <h5>Security</h5>
-                <p>Detect an attack early to better protect the network.</p>
+                <p>Detect an attack early to better protect your network.</p>
               </div>
             </div>
           </div>
@@ -204,7 +204,7 @@
               </div>
               <div class="content">
                 <h5>History</h5>
-                <p>Short description for the ones who look for something new.</p>
+                <p>All data is stored for further processing.</p>
               </div>
             </div>
           </div>
@@ -218,7 +218,7 @@
               </div>
               <div class="content">
                 <h5>Alerts</h5>
-                <p>Short description for the ones who look for something new.</p>
+                <p>Be notified immediately when problems are detected on your network.</p>
               </div>
             </div>
           </div>
