--- a/index.html
+++ b/index.html
@@ -245,11 +245,13 @@
                 </li>
                 <li class="wow fadeInUp" data-wow-delay=".4s">
                   <i class="lni lni-checkmark-circle"></i>
-                  Extensive information about the most visited IP addresses.
+                  Extensive information about the most visited IP addresses and domains.
                 </li>
                 <li class="wow fadeInUp" data-wow-delay=".45s">
                   <i class="lni lni-checkmark-circle"></i>
-                  ???
+                  Studies on failure-safety about access-points.
+                  Failure-safety studies about access-points.
+                  Access point resilience studies.
                 </li>
               </ul>
               <a href="#0" class="button button-lg radius-10 wow fadeInUp" data-wow-delay=".5s">Learn More</a>
