--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               </div>
               <div class="content">
                 <h5>Traffic Capturing</h5>
-                <p>Our solution captures the traffic at the break-out point of your network.</p>
+                <p>Our solution captures the traffic at the firewall of your network.</p>
               </div>
             </div>
           </div>
@@ -162,7 +162,7 @@
               </div>
               <div class="content">
                 <h5>Analysis</h5>
-                <p>The data is processed and verified using industry-standard analysis tools.</p>
+                <p>The data is processed and analyzed using industry-standard analysis tools.</p>
               </div>
             </div>
           </div>
