--- a/index.html
+++ b/index.html
@@ -249,9 +249,7 @@
                 </li>
                 <li class="wow fadeInUp" data-wow-delay=".45s">
                   <i class="lni lni-checkmark-circle"></i>
-                  Studies on failure-safety about access-points.
-                  Failure-safety studies about access-points.
-                  Access point resilience studies.
+                  Access-point resilience studies.
                 </li>
               </ul>
               <a href="#0" class="button button-lg radius-10 wow fadeInUp" data-wow-delay=".5s">Learn More</a>
