Updated Homepage within all sections, footer, header-nav, removed pricing-section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Place favicon.ico in the root directory -->
 
     <!-- ========================= CSS here ========================= -->
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/bootstrap-5.0.0-beta1.min.css" />
     <link rel="stylesheet" href="assets/css/LineIcons.2.0.css"/>
     <link rel="stylesheet" href="assets/css/tiny-slider.css"/>
@@ -69,15 +70,15 @@
                         <a class="page-scroll active" href="#home">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="page-scroll" href="#feature">Feature</a>
+                        <a class="page-scroll" href="#feature">Features</a>
                       </li>
                       <li class="nav-item">
                         <a class="page-scroll" href="#about">About</a>
                       </li>
 
-                      <li class="nav-item">
+                      <!-- <li class="nav-item">
                         <a class="page-scroll" href="#pricing">Pricing</a>
-                      </li>
+                      </li> -->
                       <li class="nav-item">
                         <a class="page-scroll" href="#contact">Contact</a>
                       </li>
@@ -109,7 +110,7 @@
               <div class="hero-content-wrapper">
                 <h2 class="mb-30 wow fadeInUp" data-wow-delay=".2s">ELBRUS ANALYTICS</h2>
                 <p class="mb-30 wow fadeInUp" data-wow-delay=".4s">All about your network!</p>
-                <a href="#0" class="button button-lg radius-50 wow fadeInUp" data-wow-delay=".6s">Get Started <i class="lni lni-chevron-right"></i> </a>
+                <a href="https://github.com/Elbrus-Analytics" class="button button-lg radius-50 wow fadeInUp" data-wow-delay=".6s">Get Started <i class="lni lni-chevron-right"></i> </a>
               </div>
             </div>
             <div class="col-lg-6 align-self-end">
@@ -236,7 +237,7 @@
             <div class="about-content-wrapper">
               <div class="section-title mb-30">
                 <h3 class="mb-25 wow fadeInUp" data-wow-delay=".2s">Controlled network traffic for the future</h3>
-                <p class="wow fadeInUp" data-wow-delay=".3s">Stop wasting time and money searching for bottlenecks in your network. Elbrus networking guarantees,</p>
+                <p class="wow fadeInUp" data-wow-delay=".3s">Stop wasting time and money searching for bottlenecks in your network. Elbrus Analytics guarantees,</p>
               </div>
               <ul>
                 <li class="wow fadeInUp" data-wow-delay=".35s">
@@ -265,14 +266,14 @@
     </section>
     <!-- ========================= about style-4 end ========================= -->
 
-    <!-- ========================= pricing style-4 start ========================= -->
+    <!-- ========================= pricing style-4 start =========================
     <section id="pricing" class="pricing-section pricing-style-4 bg-light">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-xl-5 col-lg-6">
             <div class="section-title mb-60">
               <h3 class="mb-15 wow fadeInUp" data-wow-delay=".2s">Pricing Plan</h3>
-              <p class="wow fadeInUp" data-wow-delay=".4s">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+              <p class="wow fadeInUp" data-wow-delay=".4s">Stop wasting time and money searching for bottlenecks in your network. Elbrus Analytics is your solution!</p>
             </div>
           </div>
           <div class="col-xl-7 col-lg-6">
@@ -327,7 +328,7 @@
         </div>
       </div>
     </section>
-    <!-- ========================= pricing style-4 end ========================= -->
+    ========================= pricing style-4 end ========================= -->
 
     <!-- ========================= contact-style-3 start ========================= -->
     <section id="contact" class="contact-section contact-style-3">
@@ -336,7 +337,7 @@
           <div class="col-xxl-5 col-xl-5 col-lg-7 col-md-10">
             <div class="section-title text-center mb-50">
               <h3 class="mb-15">Get in touch</h3>
-              <p>Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+              <p>Contact us with your problems and we will get the right solution for your network!</p>
             </div>
           </div>
         </div>
@@ -395,8 +396,8 @@
                       <i class="lni lni-phone"></i>
                     </div>
                     <div class="text">
-                      <p>0045939863784</p>
-                      <p>+004389478327</p>
+                      <p>Currently we don't have a number,</p>
+                      <p>we will update it asap!</p>
                     </div>
                   </div>
                 </div>
@@ -406,8 +407,8 @@
                       <i class="lni lni-envelope"></i>
                     </div>
                     <div class="text">
-                      <p>yourmail@gmail.com</p>
-                      <p>admin@yourwebsite.com</p>
+                      <p>contact@elbrus-analytics.com</p>
+                      <p>elbrus-analytics.com</p>
                     </div>
                   </div>
                 </div>
@@ -417,7 +418,7 @@
                       <i class="lni lni-map-marker"></i>
                     </div>
                     <div class="text">
-                      <p>John's House, 13/5 Road, Sidny United State Of America</p>
+                      <p>Rennweg 89b, 1030 Vienna, Austria</p>
                     </div>
                   </div>
                 </div>
@@ -434,9 +435,9 @@
     <section class="clients-logo-section pt-100 pb-100">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12">
-            <div class="client-logo wow fadeInUp" data-wow-delay=".2s">
-              <img src="assets/img/clients/brands.svg" alt="" class="w-100">
+          <div class="sponsors">
+            <div class="htl3r-logo" data-wow-delay=".2s">
+              <img src="assets/img/clients/htl3r.png" alt="HTL Rennweg Logo" class="w-100">
             </div>
           </div>
         </div>
@@ -454,16 +455,16 @@
                 <div class="logo">
                   <a href="#0"> <img src="assets/img/logo/logo.svg" alt=""> </a>
                 </div>
-                <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facilisis nulla placerat amet amet congue.</p>
+                <p class="desc">Wanna be up-to-date? Follow us on social media and see what we are currently working on!</p>
                 <ul class="socials">
-                  <li> <a href="#0"> <i class="lni lni-facebook-filled"></i> </a> </li>
-                  <li> <a href="#0"> <i class="lni lni-twitter-filled"></i> </a> </li>
+                  <!-- <li> <a href="#0"> <i class="lni lni-facebook-filled"></i> </a> </li>
+                  <li> <a href="#0"> <i class="lni lni-twitter-filled"></i> </a> </li> -->
                   <li> <a href="#0"> <i class="lni lni-instagram-filled"></i> </a> </li>
-                  <li> <a href="#0"> <i class="lni lni-linkedin-original"></i> </a> </li>
+                  <!-- <li> <a href="#0"> <i class="lni lni-linkedin-original"></i> </a> </li> -->
                 </ul>
               </div>
             </div>
-            <div class="col-xl-2 offset-xl-1 col-lg-2 col-md-6 col-sm-6">
+            <!-- <div class="col-xl-2 offset-xl-1 col-lg-2 col-md-6 col-sm-6">
               <div class="footer-widget wow fadeInUp" data-wow-delay=".3s">
                 <h6>Quick Link</h6>
                 <ul class="links">
@@ -504,7 +505,7 @@
                   </li>
                 </ul>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="copyright-wrapper wow fadeInUp" data-wow-delay=".2s">
