--- a/index.html
+++ b/index.html
@@ -84,11 +84,6 @@
                       </li>
                     </ul>
                   </div>
-                  
-                  <div class="header-action d-flex">
-                    <a href="#0"> <i class="lni lni-cart"></i> </a>
-                    <a href="#0"> <i class="lni lni-alarm"></i> </a>
-                  </div>
                   <!-- navbar collapse -->
                 </nav>
                 <!-- navbar -->
@@ -418,7 +413,7 @@
                       <i class="lni lni-map-marker"></i>
                     </div>
                     <div class="text">
-                      <p>Rennweg 89b, 1030 Vienna, Austria</p>
+                      <p>Rennweg 89b,<br> 1030 Vienna, Austria</p>
                     </div>
                   </div>
                 </div>
