--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         <div class="row">
           <div class="col-lg-8">
             <div class="contact-form-wrapper">
-              <form action="assets/php/contact.php" method="POST">
+              <form action="https://send.pageclip.co/TsiEcud6fSGRmUigTDiucg4CdnAFeA1C/Elbrus" class="pageclip-form" method="post">
                 <div class="row">
                   <div class="col-md-6">
                     <div class="single-input">
