--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
               </div>
               <div class="content">
                 <h5>History</h5>
-                <p>All data is stored for further processing.</p>
+                <p>All data is stored for further <br>processing.</p>
               </div>
             </div>
           </div>
@@ -267,7 +267,7 @@
     </section>
     <!-- ========================= about style-4 end ========================= -->
 
-    <!-- ========================= pricing style-4 start ========================= -->
+    <!-- ========================= pricing style-4 start =========================
     <section id="pricing" class="pricing-section pricing-style-4 bg-light">
       <div class="container">
         <div class="row align-items-center">
@@ -329,7 +329,7 @@
         </div>
       </div>
     </section>
-    <!-- ========================= pricing style-4 end ========================= -->
+    ========================= pricing style-4 end ========================= -->
 
     <!-- ========================= contact-style-3 start ========================= -->
     <section id="contact" class="contact-section contact-style-3">
@@ -438,7 +438,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="client-logo wow fadeInUp" data-wow-delay=".2s">
-              <img src="assets/img/clients/brands.svg" alt="" class="w-100">
+              <img src="assets/img/htl3r.png" alt="" class="w-100">
             </div>
           </div>
         </div>
