--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <div class="col-lg-12">
                 <nav class="navbar navbar-expand-lg">
                   <a class="navbar-brand" href="index.html">
-                    <img src="assets/img/logo/logo.png" alt="Logo" />
+                    <img src="assets/img/logo/logo.svg" alt="Logo" />
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent6" aria-controls="navbarSupportedContent6" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="toggler-icon"></span>
