--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <div class="col-lg-12">
                 <nav class="navbar navbar-expand-lg">
                   <a class="navbar-brand" href="index.html">
-                    <img src="assets/img/logo/logo.svg" alt="Logo" />
+                    <img src="assets/img/logo/logo.png" alt="Logo" />
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent6" aria-controls="navbarSupportedContent6" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="toggler-icon"></span>
@@ -449,7 +449,7 @@
             <div class="col-xl-3 col-lg-4 col-md-6">
               <div class="footer-widget wow fadeInUp" data-wow-delay=".2s">
                 <div class="logo">
-                  <a href="#0"> <img src="assets/img/logo/logo.png" alt=""> </a>
+                  <a href="#0"> <img src="assets/img/logo/logo.png" alt="" width="180px"> </a>
                 </div>
                 <p class="desc">Wanna be up-to-date? Follow us on social media and see what we are currently working on!</p>
                 <ul class="socials">
