--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Elbrus</title>
-    <meta name="description" content="" />
+    <meta name="title" content="Elbrus-Analytics">
+    <meta name="description" content="All about your network!" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Place favicon.ico in the root directory -->
 
