Updated new logo, favicon and title header

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Elbrus</title>
+    <title>Elbrus Analytics</title>
     <meta name="title" content="Elbrus-Analytics">
     <meta name="description" content="All about your network!" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Place favicon.ico in the root directory -->
 
     <!-- ========================= CSS here ========================= -->
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -18,7 +17,7 @@
     <link rel="stylesheet" href="assets/css/lindy-uikit.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon2.png">
   </head>
   <body>
     <!--[if lte IE 9]>
