--- a/index.html
+++ b/index.html
@@ -77,10 +77,9 @@
                       <li class="nav-item">
                         <a class="page-scroll" href="#about">About</a>
                       </li>
-
-                      <!-- <li class="nav-item">
-                        <a class="page-scroll" href="#pricing">Pricing</a>
-                      </li> -->
+                      <li class="nav-item">
+                        <a class="page-scroll" href="#team">Team</a>
+                      </li>
                       <li class="nav-item">
                         <a class="page-scroll" href="#contact">Contact</a>
                       </li>
@@ -263,69 +262,248 @@
     </section>
     <!-- ========================= about style-4 end ========================= -->
 
-    <!-- ========================= pricing style-4 start =========================
-    <section id="pricing" class="pricing-section pricing-style-4 bg-light">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-xl-5 col-lg-6">
-            <div class="section-title mb-60">
-              <h3 class="mb-15 wow fadeInUp" data-wow-delay=".2s">Pricing Plan</h3>
-              <p class="wow fadeInUp" data-wow-delay=".4s">Stop wasting time and money searching for bottlenecks in your network. Elbrus Analytics is your solution!</p>
+    <!-- ========================= team style-4 start ========================= -->
+    <section id="team" class="ud-team">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="ud-section-title mx-auto text-center">
+                  <span>Our Team</span>
+                  <h2>Meet The Team</h2>
+                  <p>
+                    Meet our team of young, aspiring students!
+                  </p>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="col-xl-7 col-lg-6">
-            <div class="pricing-active-wrapper wow fadeInUp" data-wow-delay=".4s">
-              <div class="pricing-active">
-                <div class="single-pricing-wrapper">
-                  <div class="single-pricing">
-                    <h6>Basic Design</h6>
-                    <h4>Web Design</h4>
-                    <h3>$ 29.00</h3>
-                    <ul>
-                      <li>Carefully crafted components</li>
-                      <li>Amazing page examples</li>
-                      <li>Super friendly support team</li>
-                      <li>Awesome Support</li>
-                    </ul>
-                    <a href="#0" class="button radius-30">Get Started</a>
+
+            <div class="row">
+              <div class="col-xl-3 col-lg-3 col-sm-6">
+                <div class="ud-single-team wow fadeInUp" data-wow-delay=".1s">
+                  <div class="ud-team-image-wrapper">
+                    <div class="ud-team-image">
+                      <img src="assets/img/team/team-01.png" alt="team" />
+                    </div>
+
+                    <img
+                      src="assets/img/team/dotted-shape.svg"
+                      alt="shape"
+                      class="shape shape-1"
+                    />
+                    <img
+                      src="assets/img/team/shape-2.svg"
+                      alt="shape"
+                      class="shape shape-2"
+                    />
                   </div>
-                </div>
-                <div class="single-pricing-wrapper">
-                  <div class="single-pricing">
-                    <h6>Standard Design</h6>
-                    <h4>Web Development</h4>
-                    <h3>$ 89.00</h3>
-                    <ul>
-                      <li>Carefully crafted components</li>
-                      <li>Amazing page examples</li>
-                      <li>Super friendly support team</li>
-                      <li>Awesome Support</li>
-                    </ul>
-                    <a href="#0" class="button radius-30">Get Started</a>
+                  <div class="ud-team-info">
+                    <h5>Anzola Fabio</h5>
+                    <h6>Scrum Master</h6>
                   </div>
+                  <ul class="ud-team-socials">
+                    <li>
+                      <a href="https://twitter.com/anzolafabio04">
+                        <i class="lni lni-twitter-filled"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.instagram.com/anzola.fabio/">
+                        <i class="lni lni-instagram-filled"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/fabio-anzola">
+                        <i class="lni lni-github-original"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.linkedin.com/in/fabio-anzola">
+                        <i class="lni lni-linkedin-original"></i>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
-                <div class="single-pricing-wrapper">
-                  <div class="single-pricing">
-                    <h6>Pro Design</h6>
-                    <h4>Design & Develop</h4>
-                    <h3>$ 199.00</h3>
-                    <ul>
-                      <li>Carefully crafted components</li>
-                      <li>Amazing page examples</li>
-                      <li>Super friendly support team</li>
-                      <li>Awesome Support</li>
-                    </ul>
-                    <a href="#0" class="button radius-30">Get Started</a>
+              </div>
+              <div class="col-xl-3 col-lg-3 col-sm-6">
+                <div class="ud-single-team wow fadeInUp" data-wow-delay=".15s">
+                  <div class="ud-team-image-wrapper">
+                    <div class="ud-team-image">
+                      <img src="assets/img/team/team-02.png" alt="team" />
+                    </div>
+
+                    <img
+                      src="assets/img/team/dotted-shape.svg"
+                      alt="shape"
+                      class="shape shape-1"
+                    />
+                    <img
+                      src="assets/img/team/shape-2.svg"
+                      alt="shape"
+                      class="shape shape-2"
+                    />
                   </div>
+                  <div class="ud-team-info">
+                    <h5>Tomsik Markus</h5>
+                    <h6>Product Owner</h6>
+                  </div>
+                  <ul class="ud-team-socials">
+                    <!--<li>
+                      <a href="https://twitter.com/">
+                        <i class="lni lni-twitter-filled"></i>
+                      </a>
+                    </li>-->
+                    <li>
+                      <a href="https://www.instagram.com/_markus.lat/">
+                        <i class="lni lni-instagram-filled"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/mmarkmos">
+                        <i class="lni lni-github-original"></i>
+                      </a>
+                    </li>
+                    <!--<li>
+                      <a href="https://www.linkedin.com/in/">
+                        <i class="lni lni-linkedin-original"></i>
+                      </a>
+                    </li>-->
+                  </ul>
                 </div>
-                
+              </div>
+              <div class="col-xl-3 col-lg-3 col-sm-6">
+                <div class="ud-single-team wow fadeInUp" data-wow-delay=".2s">
+                  <div class="ud-team-image-wrapper">
+                    <div class="ud-team-image">
+                      <img src="assets/img/team/team-03.png" alt="team" />
+                    </div>
+
+                    <img
+                      src="assets/img/team/dotted-shape.svg"
+                      alt="shape"
+                      class="shape shape-1"
+                    />
+                    <img
+                      src="assets/img/team/shape-2.svg"
+                      alt="shape"
+                      class="shape shape-2"
+                    />
+                  </div>
+                  <div class="ud-team-info">
+                    <h5>Hiermann Alexander</h5>
+                    <h6>Project staff</h6>
+                  </div>
+                  <ul class="ud-team-socials">
+                    <li>
+                      <a href="https://twitter.com/GameAlexZocktYT">
+                        <i class="lni lni-twitter-filled"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.instagram.com/alex.hier/">
+                        <i class="lni lni-instagram-filled"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/alex-hiermann">
+                        <i class="lni lni-github-original"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.linkedin.com/in/alexander-hiermann">
+                        <i class="lni lni-linkedin-original"></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="col-xl-3 col-lg-3 col-sm-6">
+                <div class="ud-single-team wow fadeInUp" data-wow-delay=".2s">
+                  <div class="ud-team-image-wrapper">
+                    <div class="ud-team-image">
+                      <img src="assets/img/team/team-04.png" alt="team" />
+                    </div>
+
+                    <img
+                      src="assets/img/team/dotted-shape.svg"
+                      alt="shape"
+                      class="shape shape-1"
+                    />
+                    <img
+                      src="assets/img/team/shape-2.svg"
+                      alt="shape"
+                      class="shape shape-2"
+                    />
+                  </div>
+                  <div class="ud-team-info">
+                    <h5>Schmidt Tobias</h5>
+                    <h6>Project staff</h6>
+                  </div>
+                  <ul class="ud-team-socials">
+                    <li>
+                      <a href="https://twitter.com/Tobiii66694619">
+                        <i class="lni lni-twitter-filled"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/Smiddyyy">
+                        <i class="lni lni-github-original"></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="col-xl-3 col-lg-3 col-sm-6">
+                <div class="ud-single-team wow fadeInUp" data-wow-delay=".25s">
+                  <div class="ud-team-image-wrapper">
+                    <div class="ud-team-image">
+                      <img src="assets/img/team/team-05.png" alt="team" />
+                    </div>
+
+                    <img
+                      src="assets/img/team/dotted-shape.svg"
+                      alt="shape"
+                      class="shape shape-1"
+                    />
+                    <img
+                      src="assets/img/team/shape-2.svg"
+                      alt="shape"
+                      class="shape shape-2"
+                    />
+                  </div>
+                  <div class="ud-team-info">
+                    <h5>Unfried Robert</h5>
+                    <h6>Project staff</h6>
+                  </div>
+                  <ul class="ud-team-socials">
+                    <li>
+                      <a href="https://twitter.com/UnfRobert">
+                        <i class="lni lni-twitter-filled"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.instagram.com/robert_unf/">
+                        <i class="lni lni-instagram-filled"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/RobertUNF">
+                        <i class="lni lni-github-original"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.linkedin.com/in/robert-unfried-a008b5224/">
+                        <i class="lni lni-linkedin-original"></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
-    ========================= pricing style-4 end ========================= -->
+        </section>
+    <!-- ========================= team style-4 end ========================= -->
 
     <!-- ========================= contact-style-3 start ========================= -->
     <section id="contact" class="contact-section contact-style-3">
