--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-12">
-                <div class="ud-section-title mx-auto text-center">
+                <div class="mb-60 ud-section-title mx-auto text-center">
                   <span>Our Team</span>
                   <h2>Meet The Team</h2>
                   <p>
