--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <div class="col-xxl-5 col-xl-5 col-lg-7 col-md-8">
             <div class="section-title text-center mb-60">
               <h3 class="mb-15 wow fadeInUp" data-wow-delay=".2s">Specializing In</h3>
-              <p class="wow fadeInUp" data-wow-delay=".4s">Needing help managing your network infrastructure? Elbrus has everything you need!</p>
+              <p class="wow fadeInUp" data-wow-delay=".4s">Need help managing your network infrastructure? Elbrus has everything you need!</p>
             </div>
           </div>
         </div>
