--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
                 <ul class="socials">
                   <!-- <li> <a href="#0"> <i class="lni lni-facebook-filled"></i> </a> </li>
                   <li> <a href="#0"> <i class="lni lni-twitter-filled"></i> </a> </li> -->
-                  <li> <a href="#0"> <i class="lni lni-instagram-filled"></i> </a> </li>
+                  <li> <a href="https://www.instagram.com/elbrusanalytics/"> <i class="lni lni-instagram-filled"></i> </a> </li>
                   <!-- <li> <a href="#0"> <i class="lni lni-linkedin-original"></i> </a> </li> -->
                 </ul>
               </div>
