Updated wrong website link in contact form

--- a/index.html
+++ b/index.html
@@ -596,8 +596,8 @@
                       <i class="lni lni-envelope"></i>
                     </div>
                     <div class="text">
-                      <p>contact@elbrus-analytics.com</p>
-                      <p>elbrus-analytics.com</p>
+                      <p>info@elbrus-analytics.at</p>
+                      <p>elbrus-analytics.at</p>
                     </div>
                   </div>
                 </div>
