Changed project roles

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                   </div>
                   <div class="ud-team-info">
                     <h5>Anzola Fabio</h5>
-                    <h6>Scrum Master</h6>
+                    <h6>Project head</h6>
                   </div>
                   <ul class="ud-team-socials">
                     <!-- <li>
@@ -347,7 +347,7 @@
                   </div>
                   <div class="ud-team-info">
                     <h5>Tomsik Markus</h5>
-                    <h6>Product Owner</h6>
+                    <h6>Deputy project head</h6>
                   </div>
                   <ul class="ud-team-socials">
                     <!--<li>
