Fixed mobile problems

--- a/index.html
+++ b/index.html
@@ -249,17 +249,14 @@
                 <div class="btn-group social-group">
                   <a target="_blank" href="https://github.com/fabio-anzola">
                     <i class="fa fa-facebook">
-                      <img class="fa fa-calendar-minus-o icon circle anima" id="icons"
-                        src="images/icons/github_logo_black.png" />
+                      <img class="icon" src="images/icons/github_logo_black.png" />
                     </i>
                   </a>
                   <a target="_blank" href="https://www.linkedin.com/in/fabio-anzola/"><i class="fa fa-facebook">
-                      <img class="fa fa-calendar-minus-o icon circle anima" id="icons"
-                        src="images/icons/linkedin_logo_black" />
+                      <img class="icon" src="images/icons/linkedin_logo_black" />
                     </i></a>
                   <a target="_blank" href="https://www.instagram.com/anzola.fabio/"><i class="fa fa-facebook">
-                      <img class="fa fa-calendar-minus-o icon circle anima" id="icons"
-                        src="images/icons/instagram_logo_black.png" />
+                      <img class="icon" src="images/icons/instagram_logo_black.png" />
                     </i></a>
                 </div>
                 <p></p>
@@ -276,8 +273,7 @@
                 <h4>Deputy Project Head</h4>
                 <div class="btn-group social-group">
                   <a target="_blank" href="#"><i class="fa fa-facebook">
-                      <img class="fa fa-calendar-minus-o icon circle anima" id="icons"
-                        src="images/icons/instagram_logo_black.png" />
+                      <img class="icon" src="images/icons/instagram_logo_black.png" />
                     </i></a>
                 </div>
                 <p></p>
@@ -297,17 +293,14 @@
                 <h4>Network Specialist</h4>
                 <div class="btn-group social-group">
                   <a target="_blank" href="https://github.com/alex-hiermann"><i class="fa fa-facebook">
-                      <img class="fa fa-calendar-minus-o icon circle anima" id="icons"
-                        src="images/icons/github_logo_black.png" />
+                      <img class="icon" src="images/icons/github_logo_black.png" />
                     </i>
                   </a>
                   <a target="_blank" href="https://www.linkedin.com/in/alexander-hiermann/"><i class="fa fa-facebook">
-                      <img class="fa fa-calendar-minus-o icon circle anima" id="icons"
-                        src="images/icons/linkedin_logo_black" /></i>
+                      <img class="icon" src="images/icons/linkedin_logo_black" /></i>
                   </a>
                   <a target="_blank" href="https://www.instagram.com/alex.hier/"><i class="fa fa-facebook">
-                      <img class="fa fa-calendar-minus-o icon circle anima" id="icons"
-                        src="images/icons/instagram_logo_black.png" />
+                      <img class="icon" src="images/icons/instagram_logo_black.png" />
                     </i></a>
                 </div>
                 <p></p>
@@ -324,12 +317,10 @@
                 <h4>Backend Developer</h4>
                 <div class="btn-group social-group">
                   <a target="_blank" href="https://github.com/Smiddyyy"><i class="fa fa-facebook">
-                      <img class="fa fa-calendar-minus-o icon circle anima" id="icons"
-                        src="images/icons/github_logo_black.png" />
+                      <img class="icon" src="images/icons/github_logo_black.png" />
                     </i></i></a>
                   <a target="_blank" href="https://twitter.com/Tobiii66694619"><i class="fa fa-facebook">
-                      <img class="fa fa-calendar-minus-o icon circle anima" id="icons"
-                        src="images/icons/twitter_logo_black.png" />
+                      <img class="icon" src="images/icons/twitter_logo_black.png" />
                     </i></a>
                 </div>
                 <p></p>
@@ -346,21 +337,17 @@
                 <h4>Frontend Developer</h4>
                 <div class="btn-group social-group">
                   <a target="_blank" href="https://github.com/RobertUNF"><i class="fa fa-facebook">
-                      <img class="fa fa-calendar-minus-o icon circle anima" id="icons"
-                        src="images/icons/github_logo_black.png" />
+                      <img class="icon" src="images/icons/github_logo_black.png" />
                     </i></a>
                   <a target="_blank" href="https://www.linkedin.com/in/robert-unfried-a008b5224/"><i
                       class="fa fa-facebook">
-                      <img class="fa fa-calendar-minus-o icon circle anima" id="icons"
-                        src="images/icons/linkedin_logo_black" />
+                      <img class="icon" src="images/icons/linkedin_logo_black" />
                     </i></a>
                   <a target="_blank" href="https://www.instagram.com/robert_unf/"><i class="fa fa-facebook">
-                      <img class="fa fa-calendar-minus-o icon circle anima" id="icons"
-                        src="images/icons/instagram_logo_black.png" />
+                      <img class="icon" src="images/icons/instagram_logo_black.png" />
                     </i></i></a>
                   <a target="_blank" href="https://twitter.com/UnfRobert"><i class="fa fa-facebook">
-                      <img class="fa fa-calendar-minus-o icon circle anima" id="icons"
-                        src="images/icons/twitter_logo_black.png" />
+                      <img class="icon" src="images/icons/twitter_logo_black.png" />
                     </i></a>
                 </div>
                 <p></p>
@@ -429,7 +416,7 @@
               <ul>
                 <ul id="contact-list">
                   <i><img src="images/icons/phone_icon.png" width="25px" /></i>
-                  +43 (0) 699 25550678
+                  +43 664 73223990
                 </ul>
                 <ul id="contact-list">
                   <i><img src="images/icons/email_icon.png" width="25px" /></i>
@@ -582,7 +569,7 @@
               <p>Rennweg 89b, 1030 Vienna, Austria.</p>
               <div class="tag-row">
                 <span>info@elbrus-analytics.at</span>
-                <span>+43 (0) 699 25550678</span>
+                <span>+43 664 73223990</span>
               </div>
             </div>
             <div class="col-md-3 footer-left text-right text-left-sm">
