Updated starting page image

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     data-natural-width="1920" data-parallax="scroll" data-image-src="images/starting-hub_image3.png">
     <div class="container content">
       <hr class="space" />
-      <h1 class="white">Analyse with Elbrus Analytics</h1>
-      <p id="tagline">Better insights, better traffic flow, better network</p>
+      <h1 class="white head_title">Analyse with Elbrus Analytics</h1>
+      <p class="head_title" id="tagline">Better insights, better traffic flow, better network</p>
       <hr class="space" />
       <a href="https://github.com/Elbrus-Analytics" target="_blank" rel="noopener noreferrer"
         class="circle-button btn btn-lg">Get started</a>
