--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                 <textarea id="messagge" name="messagge" placeholder="" class="form-control form-valu e"
                   required></textarea>
                 <hr class="space s" />
-                <a class="circle-button btn-sm btn"><i class="fa fa-send-o"></i>Send messagge</a>
+                <a class="circle-button btn-sm btn"><i class="fa fa-send-o"></i>Send message</a>
               </div>
             </div>
           </form>
