Updated background picture, typos, hyperlink misdirections, multiple sections

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
   <div class="section-bg-image parallax-window text-center section-middle-img" data-natural-height="1080"
     data-natural-width="1920" data-parallax="scroll" data-image-src="images/starting-hub_image3.png">
     <div class="container content">
-      <hr class="space" />
+      <br><br><br>
       <h1 class="white head_title">Analyse with Elbrus Analytics</h1>
       <p class="head_title" id="tagline">Better insights, better traffic flow, better network</p>
-      <hr class="space" />
+      <br><br>
       <a href="https://github.com/Elbrus-Analytics" target="_blank" rel="noopener noreferrer"
         class="circle-button btn btn-lg">Get started</a>
-      <hr class="space s" />
+      <br>
       <div class="middle-img" data-anima="fade-bottom" data-anima-time="1000"><img id="middle-img"
           src="images/frontend.png" width="90%" alt="" />
       </div>
@@ -84,7 +84,7 @@
   <div class="section-empty">
     <div class="container content">
       <div class="row">
-        <hr class="space" />
+        <br><br>
         <div class="col-md-4">
           <div class="advs-box advs-box-top-icon" data-anima="scale-up" data-trigger="hover">
             <i>
@@ -132,10 +132,9 @@
   </div>
   <div class="section-bg-image bg-top no-paddings-y" style="background-image: url(../images/bg-gradient.png)">
     <div class="container content">
-      <hr class="space" />
+      <br><br><br><br>
       <div class="row">
         <div class="col-md-6">
-          <hr class="space" />
           <h2>We improve your analysis and insights!</h2>
           <p>
             Our goal is to create a product that simplifies the monitoring of a network, which helps to visualise its
@@ -148,8 +147,8 @@
           <p>
             The core functions of our system are the following:
           </p>
-          <hr class="space m" />
-          <ul class="fa-ul text-m text-color">
+          <br>
+          <ul class="fa-ul text-m text-color" id="statistic-listing">
             <li><i class="fa-li fa fa-check-circle-o"></i>Reading out the components and uplinks utilisations via SNMP
             </li>
             <li><i class="fa-li fa fa-check-circle-o"></i>A VCS for device configurations</li>
@@ -161,17 +160,16 @@
             <li><i class="fa-li fa fa-check-circle-o"></i>An API</li>
             <li><i class="fa-li fa fa-check-circle-o"></i>And many more.</li>
           </ul>
-          <hr class="space l" />
         </div>
         <div id="imac-div">
-          <hr class="space" />
+          <br><br>
           <img id="imac-picture" src="../images/imac.png" alt="" />
-          <hr class="space" />
+          <br><br>
         </div>
       </div>
     </div>
   </div>
-  <hr class="space l" />
+  <br><br><br><br>
   <div class="section-empty">
     <div class="container content" id="about-us-ref" data-hs-anchor="true">
       <div class="row vertical-row" id="about-us-div">
@@ -203,28 +201,24 @@
           <h4 class="text-m">Capturing Quantity</h4>
           <div class="counter-box-simple text-color text-bold"><span class="counter text-l" data-to="7000">1</span><span
               class="text-s">Gigabit/s</span></div>
-          <hr class="space xs" />
           <p>of traffic capturing.</p>
         </div>
         <div class="col-md-3 col-sm-6 boxed-inverse shadow-1">
           <h4 class="text-m">Report Generation</h4>
           <div class="counter-box-simple text-color text-bold"><span class="counter text-l" data-to="300">96</span><span
               class="text-s"></span></div>
-          <hr class="space xs" />
           <p>reports delivering per day.</p>
         </div>
         <div class="col-md-3 col-sm-6 boxed-inverse shadow-1">
           <h4 class="text-m">Software Deployment</h4>
           <div class="counter-box-simple text-color text-bold"><span class="counter text-l"
               data-to="900">20,600+</span><span class="text-s"></span></div>
-          <hr class="space xs" />
           <p>lines of code written.</p>
         </div>
         <div class="col-md-3 col-sm-6 boxed-inverse shadow-1">
           <h4 class="text-m">Charts & Graphs</h4>
           <div class="counter-box-simple text-color text-bold"><span class="counter text-l"
               data-to="2500">20+</span><span class="text-s"></span></div>
-          <hr class="space xs" />
           <p>of highly detailed diagrams.</p>
         </div>
       </div>
@@ -272,7 +266,7 @@
                 <h2>Markus Tomsik</h2>
                 <h4>Deputy Project Head</h4>
                 <div class="btn-group social-group">
-                  <a target="_blank" href="#"><i class="fa fa-facebook">
+                  <a target="_blank" href="https://www.instagram.com/_markus.lat/"><i class="fa fa-facebook">
                       <img class="icon" src="images/icons/instagram_logo_black.png" />
                     </i></a>
                 </div>
@@ -281,7 +275,7 @@
             </div>
           </div>
         </div>
-        <hr class="space" />
+        <br><br><br><br>
         <div class="row" id="team-row">
           <div class="col-md-3">
             <div class="advs-box niche-box-team" data-anima="scale-up" data-trigger="hover">
@@ -290,7 +284,7 @@
               </a>
               <div class="content-box">
                 <h2>Alexander Hiermann</h2>
-                <h4>Network Specialist</h4>
+                <h4>IT & Solutions Architect</h4>
                 <div class="btn-group social-group">
                   <a target="_blank" href="https://github.com/alex-hiermann"><i class="fa fa-facebook">
                       <img class="icon" src="images/icons/github_logo_black.png" />
@@ -319,6 +313,9 @@
                   <a target="_blank" href="https://github.com/Smiddyyy"><i class="fa fa-facebook">
                       <img class="icon" src="images/icons/github_logo_black.png" />
                     </i></i></a>
+                  <a target="_blank" href="https://www.linkedin.com/in/tobiasschm/"><i class="fa fa-facebook">
+                      <img class="icon" src="images/icons/linkedin_logo_black" />
+                    </i></a>
                   <a target="_blank" href="https://twitter.com/Tobiii66694619"><i class="fa fa-facebook">
                       <img class="icon" src="images/icons/twitter_logo_black.png" />
                     </i></a>
@@ -357,30 +354,37 @@
         </div>
       </div>
     </div>
-    <div class="section-bg-image" style="background-image:url(../images/bg-23.jpg)">
-      <div class="container content" id="support-container">
-        <div class="row">
-          <div class="col-md-6 col-center text-center boxed-inverse shadow-1">
-            <h4>Support our project</h4>
-            <p>
-              Are you interested in sponsoring us and our project?
-            </p>
-            <a href="#contact-us-ref" class="circle-button btn btn-sm">Contact us</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <hr class="space" />
+    <br><br>
     <a id="contact-us-ref" data-hs-anchor="true"></a>
     <div class="container content">
       <iframe id="google-map"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2659.8105774332403!2d16.39565561587391!3d48.19100105541715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476d075e036ac393%3A0x9326dcbe2d63c038!2sHTL%20Rennweg!5e0!3m2!1sen!2sat!4v1655635189319!5m2!1sen!2sat"
-        frameborder="0" scrolling="no"></iframe>
-      <hr class="space" />
+        frameborder="0" scrolling="no" height="400"></iframe>
+      <!-- <script>
+          var map
+          var coordinates = { lat: 48.19126588475009, lng: 16.397755667336323 };
+          function initMap() {
+            map = new google.maps.Map(document.getElementById("map"), {
+              zoom: 18,
+              center: coordinates,
+            });
+    
+            new google.maps.Marker({
+              position: coordinates,
+              map,
+              title: "Our headquarters: HTL Rennweg",
+            });
+          }
+    
+          window.initMap = initMap;
+        </script>
+        <script id="google-map" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYQyd3NFM4aAbLXXFqJrr9LNvJ490LUGI&callback=initMap"
+          defer></script> -->
+      <br><br>
       <div class="row proporzional-row" id="contact-us-now-div">
         <div class="col-md-6 col-sm-12">
           <h2 class="text-color">Contact us now</h2>
-          <hr class="space s" />
+          <br>
           <form action="http://www.framework-y.com/scripts/php/contact-form.php" class="form-box form-ajax"
             method="post">
             <div class="row">
@@ -397,13 +401,13 @@
                 <input id="phone" name="phone" placeholder="" type="text" class="form-control form-value">
               </div>
             </div>
-            <hr class="space xs" />
+            <br>
             <div class="row">
               <div class="col-md-12">
                 <p>Your message</p>
                 <textarea id="messagge" name="messagge" placeholder="" class="form-control form-valu e"
                   required></textarea>
-                <hr class="space s" />
+                <br>
                 <a class="circle-button btn-sm btn"><i class="fa fa-send-o"></i>Send message</a>
               </div>
             </div>
@@ -417,6 +421,9 @@
                 <ul id="contact-list">
                   <i><img src="images/icons/phone_icon.png" width="25px" /></i>
                   +43 664 73223990
+                </ul>
+                <ul>
+                  <i><img src="images/icons/empty_field.png" width="25px" /></i>
                 </ul>
                 <ul id="contact-list">
                   <i><img src="images/icons/email_icon.png" width="25px" /></i>
@@ -440,7 +447,7 @@
               </ul>
             </div>
           </div>
-          <hr class="space m" />
+          <br><br>
           <div class="btn-group social-group btn-group-icons" id="contact-buttons">
             <a href="https://github.com/Elbrus-Analytics" data-social="share-github" target="_blank"
               rel="noopener noreferrer">
@@ -454,109 +461,6 @@
         </div>
       </div>
     </div>
-    <hr class="space xl" />
-    <!-- <div class="section-empty no-paddings-y text-center">
-    <div class="container content">
-      <h2>Check our pricing!</h2>
-      <hr class="space" />
-      <div class="row">
-        <div class="col-md-4">
-          <div class="list-group pricing-table">
-            <div class="list-group-item pricing-price">
-              <span>$</span>19<span>/mon</span>
-            </div>
-            <div class="list-group-item pricing-name">
-              <h3>Base plan</h3>
-            </div>
-            <div class="list-group-item">
-              15 versions
-            </div>
-            <div class="list-group-item">
-              All files included
-            </div>
-            <div class="list-group-item">
-              Custom design and coding
-            </div>
-            <div class="list-group-item">
-              Money back guarante
-            </div>
-            <div class="list-group-item">
-              24/7 support
-            </div>
-            <div class="list-group-item pricing-btn">
-              <a class="btn btn-sm btn-border circle-button" href="#"> Order now </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="list-group pricing-table">
-            <div class="list-group-item pricing-price">
-              <span>$</span>49<span>/mon</span>
-            </div>
-            <div class="list-group-item pricing-name">
-              <h3>Silver plan</h3>
-            </div>
-            <div class="list-group-item">
-              15 versions
-            </div>
-            <div class="list-group-item">
-              All files included
-            </div>
-            <div class="list-group-item">
-              Custom design and coding
-            </div>
-            <div class="list-group-item">
-              Money back guarante
-            </div>
-            <div class="list-group-item">
-              24/7 support
-            </div>
-            <div class="list-group-item pricing-btn">
-              <a class="btn btn-sm btn-border circle-button" href="#"> Order now </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="list-group pricing-table">
-            <div class="list-group-item pricing-price">
-              <span>$</span>99<span>/mon</span>
-            </div>
-            <div class="list-group-item pricing-name">
-              <h3>Gold plan</h3>
-            </div>
-            <div class="list-group-item">
-              15 versions
-            </div>
-            <div class="list-group-item">
-              All files included
-            </div>
-            <div class="list-group-item">
-              Custom design and coding
-            </div>
-            <div class="list-group-item">
-              Money back guarante
-            </div>
-            <div class="list-group-item">
-              24/7 support
-            </div>
-            <div class="list-group-item pricing-btn">
-              <a class="btn btn-sm btn-border circle-button" href="#"> Order now </a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <hr class="space" />
-      <div class="row">
-        <div class="col-md-9 col-center">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
-          </p>
-        </div>
-      </div>
-      <hr class="space" />
-    </div>
-  </div> -->
     <i class="scroll-top scroll-top-mobile show fa fa-sort-asc"></i>
     <footer class="footer-base">
       <div class="content">
