Updated footer and fixed responsive bugs

--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
       </div>
     </div>
   </header>
-
   <div class="section-bg-image parallax-window text-center section-middle-img" data-natural-height="1080"
     data-natural-width="1920" data-parallax="scroll" data-image-src="images/starting-hub_image3.png">
     <div class="container content">
@@ -132,7 +131,7 @@
   </div>
   <div class="section-bg-image bg-top no-paddings-y" style="background-image: url(../images/bg-gradient.png)">
     <div class="container content">
-      <br><br><br><br>
+      <br><br class="responsive-br"><br class="responsive-br"><br>
       <div class="row">
         <div class="col-md-6">
           <h2>We improve your analysis and insights!</h2>
@@ -169,7 +168,7 @@
       </div>
     </div>
   </div>
-  <br><br><br><br>
+  <br><br class="responsive-br"><br class="responsive-br"><br>
   <div class="section-empty">
     <div class="container content" id="about-us-ref" data-hs-anchor="true">
       <div class="row vertical-row" id="about-us-div">
@@ -222,7 +221,6 @@
           <p>of highly detailed diagrams.</p>
         </div>
       </div>
-      <br data-hs-anchor="true" />
     </div>
     <div class="section-empty section-item text-center">
       <div class="container content" id="team-ref">
@@ -270,12 +268,11 @@
                       <img class="icon" src="images/icons/instagram_logo_black.png" />
                     </i></a>
                 </div>
-                <p></p>
               </div>
             </div>
           </div>
         </div>
-        <br><br><br><br>
+        <br class="responsive-br"><br class="responsive-br"><br class="responsive-br"><br class="responsive-br">
         <div class="row" id="team-row">
           <div class="col-md-3">
             <div class="advs-box niche-box-team" data-anima="scale-up" data-trigger="hover">
@@ -347,7 +344,6 @@
                       <img class="icon" src="images/icons/twitter_logo_black.png" />
                     </i></a>
                 </div>
-                <p></p>
               </div>
             </div>
           </div>
@@ -408,7 +404,7 @@
                 <textarea id="messagge" name="messagge" placeholder="" class="form-control form-valu e"
                   required></textarea>
                 <br>
-                <a class="circle-button btn-sm btn"><i class="fa fa-send-o"></i>Send message</a>
+                <a class="circle-button btn-sm btn" id="form-button"><i class="fa fa-send-o"></i>Send message</a>
               </div>
             </div>
           </form>
@@ -462,11 +458,11 @@
       </div>
     </div>
     <i class="scroll-top scroll-top-mobile show fa fa-sort-asc"></i>
-    <footer class="footer-base">
+    <footer class="footer-base" >
       <div class="content">
         <div class="container">
           <div class="row">
-            <div class="col-md-3 footer-center text-left">
+            <div class="col-md-3 footer-center text-left" id="footer-logo-div">
               <img width="120" src="../images/logos/logo.png" alt="" />
             </div>
             <div class="col-md-6 footer-left text-left">
